<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_vibration"
        android:checkable="true"
        android:title="@string/menu_item_vibration_text" />

    <item
        android:id="@+id/item_theme"
        android:title="@string/menu_item_theme_menu">

    <menu >
        <item
            android:id="@+id/item_theme_as_system"
            android:title="@string/menu_item_theme_as_system" />

        <item
            android:id="@+id/item_theme_light"
            android:title="@string/menu_item_theme_light" />

        <item
            android:id="@+id/item_theme_dark"
            android:title="@string/menu_item_theme_dark" />
    </menu>

    </item>
</menu>